4.sep (ws)
      - more code for midi remote control
      - framework for osc support
30.aug (db)
      - Fix #6937: Measure Properties should be modal dialog
29.aug (ws)
      - implemented subbeam control (1/32 & 1/64)
      - feathered beams
      (la)
      - fix #6775: Seg. fault by double clicking any element twice
      - fix #6888: When exchanging voice, voice 1 is removed
28.aug (ws)
      - new element ChordLine: editable bezier line attached to
        top note of chord (for fall, doit, "plop" and bend)
      - implemented beams over systems
      (la)
      - fix get keysig from plugin when concert pitch mode is set
      - make command line option "-i" cross platform
27.aug (ws)
      - make note dot position editable
26.aug (ws)
      - fix layout of dottet rests
      - fix dot position of rests <= 1/32 (dots have to be raised)
      - layout y position of rests in a multi voice context
24.aug (ws)
      - header/footer replacing page number and copyright
23.aug (ws)
      - replace dynamic generated icons by static files
      - make icon files installable
      - new command line option "-i" to load icons from filesystem
        (icons can be edited and tested without compiling mscore)
22.aug (db)
      - fix #6735: C# for AltoSax in default soundfont is silent
21.aug (lv)
      - #5637 support reading bww files: fixed measure length
17.aug (ws)
      - playback of tremolos
16.aug (lv)
      - #5637 support reading bww files: iotest (mscore)
15.aug (lv)
      - #5637 support reading bww files: set midi instrument to 72
      - #5637 support reading bww files: fix multiple grace notes
      - #5637 support reading bww files: iotest (bww2mxml)
      (la)
      - fix #6706: Crash when inserting slurs from palette while editing text
      - fix #6740: Autosave works only the first time
14.aug (ws)
      - infrastructure for new drumroll editor
      - changed implementation of KeySig + KeySigEvent: do not pack
        all information in subtype()