@@ -1,3 +1,5 @@
+6.sep (ws)
+      - add preferences for osc support (enable/disable, port number)
 4.sep (ws)
       - more code for midi remote control
       - framework for osc support
